DOC-1754: /ROOT/examples/live-demos/typography/index.html
Changed textarea id attribute from typography to advanced-typography.

--- a/modules/ROOT/examples/live-demos/typography/index.html
+++ b/modules/ROOT/examples/live-demos/typography/index.html
@@ -1,4 +1,4 @@
-<textarea id="typography">
+<textarea id="advanced-typography">
 <h2>The typesetter is not happy</h2>
 
 <h4>Run the en-US typography rules over the short narrative below to improve the typesetter’s mood.</h4>
