DOC-1754: /ROOT/examples/live-demos/typography/index.html
Edits to text and wrapped the editorial note in em tags.

--- a/modules/ROOT/examples/live-demos/typography/index.html
+++ b/modules/ROOT/examples/live-demos/typography/index.html
@@ -1,7 +1,5 @@
 <textarea id="advanced-typography">
-<h2>The typesetter is not happy</h2>
-
-<h4>Run the en-US typography rules over the short narrative below to improve the typesetter’s mood.</h4>
+<h2>Run the en-US typography rules over the short narrative below to change the typewriter-centric typesetting to typographer-friendly typesetting.</h2>
 
 <p>"It's over there", she said.</p>
 
@@ -17,5 +15,5 @@
 
 <p>She -> back to the table he'd grabbed the design from. "The <code>8-bit and "gloriously proud of it"</code> version is also back there. Sarah will need that as well, and all the sample product packaging using both designs."</p>
 
-<p>He turned back, grabbed the extra sheet, and headed back to his office. [ This sentence needs work. Something about 10C hotter to reflect his excitement -- ed. ]</p>
+<p>He turned back, grabbed the extra sheet, and headed back to his office. <em>[ This sentence needs work. Something about 10C hotter to reflect his excitement -- ed. ]</em></p>
 </textarea>
