DOC-1754: /modules/ROOT/examples/live-demos/typography/index.html
Re-wrote the instructional text in the advanced typography plugin interactive example.

--- a/modules/ROOT/examples/live-demos/typography/index.html
+++ b/modules/ROOT/examples/live-demos/typography/index.html
@@ -1,5 +1,12 @@
 <textarea id="advanced-typography">
-<h2>Run the en-US typography rules over the short narrative below to change the typewriter-centric typesetting to typographer-friendly typesetting.</h2>
+
+<h3>Using the Advanced Typography plugin</h3>
+
+<ol>
+<li>Select the text of the short narrative below.</li>
+<li>Press the typography toolbar button to run the <em>Advanced Typography</em> plugin’s en-US typography rules.</li>
+<li>See the text change from typewriter-centric typesetting to typographer-friendly typesetting.</li>
+</ol>
 
 <p>"It's over there", she said.</p>
 
