DOC-1754: /ROOT/examples/live-demos/typography/index.html
Edited the short narrative example text in the advanced typography plugin interactive example.

--- a/modules/ROOT/examples/live-demos/typography/index.html
+++ b/modules/ROOT/examples/live-demos/typography/index.html
@@ -10,11 +10,11 @@
 
 <p>"It's over there", she said.</p>
 
-<p>"No. There", she pointed: ->.</p>
+<p>"No. There" -- -> -- she pointed.</p>
 
-<p>He smiled as his hands picked up the new design. "Got it", he said.</p>
+<p>"Got it", he said.</p>
 
-<p>He looked down at the simple but striking image. "So, I presume the next step is to (c) this?"</p>
+<p>He smiled as he looked down at the simple but striking image. "So, I presume the next step is to (c) this?"</p>
 
 <p>"Nah, that happens automatically. We need a full-blown (tm). And that takes... lawyers."</p>
 
