DOC-1754: /modules/ROOT/examples/live-demos/typography/index.html
Added L3 header above the short narrative in the advanced typography plugin interactive example.

--- a/modules/ROOT/examples/live-demos/typography/index.html
+++ b/modules/ROOT/examples/live-demos/typography/index.html
@@ -8,6 +8,8 @@
 <li>See the text change from typewriter-centric typesetting to typographer-friendly typesetting.</li>
 </ol>
 
+<h3>Short narrative</h3>
+
 <p>"It's over there", she said.</p>
 
 <p>"No. There" -- -> -- she pointed.</p>
