DOC-1827: /modules/ROOT/examples/live-demos/typography/index.html
A presentation copy edit. For real this time.

The reference to the Inline CSS button was set to present as monospaced. It is now set to present as bold.

Note to self: sometimes you are marking material up in actual HTML, not AsciiDoc or Markdown.

--- a/modules/ROOT/examples/live-demos/inline-css/index.html
+++ b/modules/ROOT/examples/live-demos/inline-css/index.html
@@ -25,7 +25,7 @@
 
   <p>And, as output, it provides a single file, with all CSS styling applied inline to each HTML element.</p>
 
-  <p> As an example, below is a small text section with various styles applied. Press the *Inline CSS* button to view the content where all CSS are inlined</p>
+  <p> As an example, below is a small text section with various styles applied. Press the <strong>Inline CSS</strong> button to view the content where all CSS are inlined</p>
   <br>
   <p class="red">Red text</p>
   <p class="red blue-background">Red text - blue background</p>
