--- a/modules/ROOT/examples/live-demos/inline-css/index.html
+++ b/modules/ROOT/examples/live-demos/inline-css/index.html
@@ -21,11 +21,11 @@
 
   <h2>The TinyMCE Inline CSS plugin</h2>
 
-  <p>The TinyMCE Inline CSS plugin takes, as input, a TinyMCE document, with its multiple components.</p>
+  <p>The TinyMCE Inline CSS plugin takes a TinyMCE document, with its multiple components.</p>
 
-  <p>And, as output, it provides a single file, with all CSS styling applied inline to each HTML element.</p>
+  <p>And returns a single file, with all CSS styling applied inline to each HTML element.</p>
 
-  <p> As an example, below is a small text section with various styles applied. Press the <strong>Inline CSS</strong> button to view the content where all CSS are inlined</p>
+  <p>As an example, below is a small text section with various styles applied. Press the <strong>Inline CSS</strong> button to view the content where all CSS are inlined</p>
   <br>
   <p class="red">Red text</p>
   <p class="red blue-background">Red text - blue background</p>
