--- a/modules/ROOT/examples/live-demos/advcode/index.html
+++ b/modules/ROOT/examples/live-demos/advcode/index.html
@@ -22,11 +22,14 @@
         <textarea class="advcodedemo">
           <p>The Advanced Code Editor (<code>advcode</code>) plugin provides the same dialog as the code (<code>code</code>) plugin, but with the following additional features:</p>
           <ul>
-            <li>Syntax highlighting</li>
-            <li>Element matching and closing</li>
-            <li>Code folding</li>
-            <li>Multiple selections/carets</li>
-            <li>Search and replace</li>
+            <li>Syntax highlighting.</li>
+            <li>Element matching and closing.</li>
+            <li>Code folding.</li>
+            <li>Multiple selections/carets.</li>
+            <li>Search and replace.</li>
+            <li>Dark or light mode for code display.</li>
+            <li>Increase and decrease display font size.</li>
+            <li>Full-screen mode.</li>
           </ul>
           <p>To open the Advanced Code Editor dialog:</p>
           <ul>
