DOC-1907: /examples/live-demos/advcode/index.html
Added notes setting out the requirements for the new full-screen button to present and work in the Advanced Code Editor dialog.

--- a/modules/ROOT/examples/live-demos/advcode/index.html
+++ b/modules/ROOT/examples/live-demos/advcode/index.html
@@ -31,6 +31,7 @@
             <li>Increase and decrease display font size.</li>
             <li>Full-screen mode.</li>
           </ul>
+          <p>For the Advanced Code Editor to offer a full-screen mode requires the <a href="https://tiny.cloud/docs/tinymce/6/fullscreen">Full screen</a> plugin and requires the Advanced Code Editor to be running in <a href="https://tiny.cloud/docs/tinymce/6/advcode/#advcode_inline">inline mode</a>.</p>
           <p>To open the Advanced Code Editor dialog:</p>
           <ul>
             <li>On the menu bar, open <strong>View</strong> &gt; <strong>Source code</strong>.</li>
