--- a/modules/ROOT/examples/live-demos/advcode/index.html
+++ b/modules/ROOT/examples/live-demos/advcode/index.html
@@ -22,12 +22,16 @@
         <textarea class="advcodedemo">
           <p>The Advanced Code Editor (<code>advcode</code>) plugin provides the same dialog as the code (<code>code</code>) plugin, but with the following additional features:</p>
           <ul>
-            <li>Syntax highlighting</li>
-            <li>Element matching and closing</li>
-            <li>Code folding</li>
-            <li>Multiple selections/carets</li>
-            <li>Search and replace</li>
+            <li>Syntax highlighting.</li>
+            <li>Element matching and closing.</li>
+            <li>Code folding.</li>
+            <li>Multiple selections/carets.</li>
+            <li>Search and replace.</li>
+            <li>Dark or light mode for code display.</li>
+            <li>Increase and decrease display font size.</li>
+            <li>Full-screen mode.</li>
           </ul>
+          <p>For the Advanced Code Editor to offer a full-screen mode requires the <a href="https://tiny.cloud/docs/tinymce/6/fullscreen">Full screen</a> plugin and requires the Advanced Code Editor to be running in <a href="https://tiny.cloud/docs/tinymce/6/advcode/#advcode_inline">inline mode</a>.</p>
           <p>To open the Advanced Code Editor dialog:</p>
           <ul>
             <li>On the menu bar, open <strong>View</strong> &gt; <strong>Source code</strong>.</li>
