--- a/modules/ROOT/examples/live-demos/advtemplate-predefined/index.html
+++ b/modules/ROOT/examples/live-demos/advtemplate-predefined/index.html
@@ -1,8 +1,8 @@
 <textarea id="advanced-template-predefined">
   <h3>Inserting a template</h3>
-  <p>To insert a template</p>
+  <p>To insert a template:</p>
   <ol>
-    <li>select <strong>Insert template...</strong> from the <strong>Insert</strong> menu or<br />
+    <li>select <strong>Insert template…</strong> from the <strong>Insert</strong> menu or<br />
     select the <strong>Insert template</strong> toolbar button.</li>
     <li>select the template to add to the TinyMCE document from the <strong>Templates</strong> dialog that presents.</li>
     <li>click <strong>Insert</strong> or press <strong>Return</strong>.</li>
