DOC-2065: live-demos/full-featured/index.html
Added table for demonstrating the Advanced Typography in the full-featured demo.

Also general copy-edits and edits to index.html.

--- a/modules/ROOT/examples/live-demos/full-featured/index.html
+++ b/modules/ROOT/examples/live-demos/full-featured/index.html
@@ -1,20 +1,26 @@
 <textarea id="full-featured">
-  {{logofordemoshtml}}
-  <h2 style="text-align: center;">Welcome to the TinyMCE Cloud demo!</h2>
-  <h5 style="text-align: center;">Note, this includes some "enterprise/premium" features.<br>Visit the <a href="{{pricingpage}}">pricing page</a> to learn more about our premium plugins.</h5>
-  <p>Please try out the features provided in this full featured example.</p>
+{{logofordemoshtml}}
+<h2 style="text-align: center;">Welcome to the TinyMCE Cloud demo!</h2>
 
-  <h2>Got questions or need help?</h2>
-  <ul>
-    <li>Our <a class="mceNonEditable" href="{{site-url}}/tinymce/6/">documentation</a> is a great resource for learning how to configure TinyMCE.</li>
-    <li>Have a specific question? Try the <a href="{{communitysupporturl}}" target="_blank" rel="noopener"><code>{{prodnamecode}}</code> tag at Stack Overflow</a>.</li>
-    <li>We also offer enterprise grade support as part of <a href="{{pricingpage}}">TinyMCE premium subscriptions</a>.</li>
-  </ul>
+<h5 style="text-align: center;">This demo includes <em>enterprise</em>, also known as <em>Premium</em> features.</h5>
 
-  <h2>A simple table to play with</h2>
+<h5 style="text-align: center;">Try out these features as provided in this full featured example.</h5>
+
+<h5 style="text-align: center;">And visit the <a href="{{pricingpage}}">pricing page</a> to learn more about our Premium plugins.</h5>
+
+<h2>Got questions or need help?</h2>
+
+<ul>
+  <li>Our <a class="mceNonEditable" href="{{site-url}}/tinymce/6/">documentation</a> is a great resource for learning how to configure TinyMCE.</li>
+  <li>Have a specific question? Try the <a href="{{communitysupporturl}}" target="_blank" rel="noopener"><code>{{prodnamecode}}</code> tag at Stack Overflow</a>.</li>
+  <li>We also offer enterprise grade support as part of <a href="{{pricingpage}}">TinyMCE premium subscriptions</a>.</li>
+</ul>
+
+<h2>A simple table to play with</h2>
+
   <table style="border-collapse: collapse; width: 100%;" border="1">
     <thead>
-      <tr>
+      <tr style="text-align: left;">
         <th>Product</th>
         <th>Cost</th>
         <th>Really?</th>
@@ -24,20 +30,61 @@
       <tr>
         <td>TinyMCE Cloud</td>
         <td>Get started for free</td>
-        <td>YES!</td>
+        <td><strong>Yes!</strong></td>
       </tr>
       <tr>
         <td>Plupload</td>
         <td>Free</td>
-        <td>YES!</td>
+        <td><strong>Yes!</strong></td>
       </tr>
     </tbody>
   </table>
 
-  <h2>Found a bug?</h2>
-  <p>If you think you have found a bug please create an issue on the <a href="https://github.com/tinymce/tinymce/issues">GitHub repo</a> to report it to the developers.</p>
 
-  <h2>Finally ...</h2>
-  <p>Don't forget to check out our other product <a href="http://www.plupload.com" target="_blank">Plupload</a>, your ultimate upload solution featuring HTML5 upload support.</p>
-  <p>Thanks for supporting TinyMCE! We hope it helps you and your users create great content.<br>All the best from the TinyMCE team.</p>
+<h2>Character strings to demonstrate some of the Advanced Typography plugin’s features</h2>
+
+<p>Select the characters in the table below and choose <strong>Tools → Typography → Enhances</strong>.</p>
+
+  <table style="border-collapse: collapse; width: 100%;" border="1">
+    <thead>
+      <tr style="text-align: left;">
+        <th>Character strings</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Not really an arrow glyph: -></td>
+      </tr>
+      <tr>
+        <td>'Single tear-drop quotation marks and apostrophes aren't typographically elegant.'</td>
+      </tr>
+      <tr>
+        <td>"Neither are double tear-drop quotation marks."</td>
+      </tr>
+      <tr>
+        <td>But they should be honoured in a <code>code-fragment: "true"</code>.</td>
+      </tr>
+      <tr>
+        <td>(c) symbol</td>
+      </tr>
+      <tr>
+        <td>(tm) symbol</td>
+      </tr>
+      <tr>
+        <td>30C is 86F</td>
+      </tr>
+    </tbody>
+  </table>
+
+<h2>Found a bug?</h2>
+
+<p>If you think you have found a bug please create an issue on the <a href="https://github.com/tinymce/tinymce/issues">GitHub repo</a> to report it to the developers.</p>
+
+<h2>Finally…</h2>
+
+<p>Don’t forget to check out our other product <a href="http://plupload.com" target="_blank">Plupload</a>, your ultimate upload solution featuring HTML5 upload support.</p>
+
+<p>Thanks for supporting TinyMCE! We hope it helps you and your users create great content.</p>
+
+<p>All the best from the TinyMCE team.</p>
 </textarea>
