DOC-2065: live-demos/full-featured/example.js & index.js
Spelling correction for en-US spelling: s/honoured/honored/.

--- a/modules/ROOT/examples/live-demos/full-featured/index.html
+++ b/modules/ROOT/examples/live-demos/full-featured/index.html
@@ -62,7 +62,7 @@
         <td>"Neither are double tear-drop quotation marks."</td>
       </tr>
       <tr>
-        <td>But they should be honoured in a <code>code-fragment: "true"</code>.</td>
+        <td>But they should be honored in a <code>code-fragment: "true"</code>.</td>
       </tr>
       <tr>
         <td>(c) symbol</td>
