DOC-2065: live-demos/full-featured/example.js & index.js
Typo correction: s/Enhances/Enhance/.

--- a/modules/ROOT/examples/live-demos/full-featured/index.html
+++ b/modules/ROOT/examples/live-demos/full-featured/index.html
@@ -43,7 +43,7 @@
 
 <h2>Character strings to demonstrate some of the Advanced Typography plugin’s features</h2>
 
-<p>Select the characters in the table below and choose <strong>Tools → Typography → Enhances</strong>.</p>
+<p>Select the characters in the table below and choose <strong>Tools → Typography → Enhance</strong>.</p>
 
   <table style="border-collapse: collapse; width: 100%;" border="1">
     <thead>
