DOC-2065: live-demos/full-featured/index.html
Changed table of characters to tweak with the Advanced Typography plugin into a list of characters to tweak with the Advanced Typography plugin.

--- a/modules/ROOT/examples/live-demos/full-featured/index.html
+++ b/modules/ROOT/examples/live-demos/full-featured/index.html
@@ -43,38 +43,16 @@
 
 <h2>Character strings to demonstrate some of the Advanced Typography plugin’s features</h2>
 
-<p>Select the characters in the table below and choose <strong>Tools → Typography → Enhance</strong>.</p>
+<p>Select the characters in the list below and choose <strong>Tools → Typography → Enhance</strong>.</p>
 
-  <table style="border-collapse: collapse; width: 100%;" border="1">
-    <thead>
-      <tr style="text-align: left;">
-        <th>Character strings</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Not really an arrow glyph: -></td>
-      </tr>
-      <tr>
-        <td>'Single tear-drop quotation marks and apostrophes aren't typographically elegant.'</td>
-      </tr>
-      <tr>
-        <td>"Neither are double tear-drop quotation marks."</td>
-      </tr>
-      <tr>
-        <td>But they should be honored in a <code>code-fragment: "true"</code>.</td>
-      </tr>
-      <tr>
-        <td>(c) symbol</td>
-      </tr>
-      <tr>
-        <td>(tm) symbol</td>
-      </tr>
-      <tr>
-        <td>30C is 86F</td>
-      </tr>
-    </tbody>
-  </table>
+<ul style="list-style-type: none;">
+	<li>Not really an arrow glyph: -></li>
+	<li>"Double tear-drop quotation marks and apostrophes aren't typographically elegant."</li>
+	<li>But they should be honored in a <code>code-fragment: "true"</code>.</li>
+	<li>(c) symbol</li>
+	<li>(tm) symbol</li>
+	<li>30C is 86F</li>
+</ul>
 
 <h2>Found a bug?</h2>
 
