DOC-2065: live-demos/full-featured/index.html
Added notes on using the now-included Advanced Template demonstration.

--- a/modules/ROOT/examples/live-demos/full-featured/index.html
+++ b/modules/ROOT/examples/live-demos/full-featured/index.html
@@ -54,6 +54,14 @@
 	<li>30C is 86F</li>
 </ul>
 
+<h2>Note on the included Advanced Template demonstration</h2>
+
+<p>The included Advanced Template demonstration uses the <a class="mceNonEditable" href="{{site-url}}/tinymce/6/advanced-templates/#advtemplate_list"><code>advtemplate_list</code></a> configuration option to return a local promise containing a basic Template structure with self-contained examples.</p>
+
+<p>This example allows for the loading of and interacting with the Advanced Template user-interface but cannot be used to create, edit, or save Template items.</p>
+
+<p>See the <a class="mceNonEditable" href="{{site-url}}/tinymce/6/advanced-templates/">Advanced Templates</a> documentation for details on how to setup Advanced Templates to interact with external data sources.</p>
+
 <h2>Found a bug?</h2>
 
 <p>If you think you have found a bug please create an issue on the <a href="https://github.com/tinymce/tinymce/issues">GitHub repo</a> to report it to the developers.</p>
@@ -65,4 +73,5 @@
 <p>Thanks for supporting TinyMCE! We hope it helps you and your users create great content.</p>
 
 <p>All the best from the TinyMCE team.</p>
+
 </textarea>
