DOC-2069: /template-creation/index.html & index.js
Edits to placeholder material in both files.

--- a/modules/ROOT/examples/live-demos/template-creation/index.html
+++ b/modules/ROOT/examples/live-demos/template-creation/index.html
@@ -1,4 +1,5 @@
 <textarea id="template-creation">
+<div id="template">
   {{logofordemoshtml}}
   <h2 style="text-align: center;">The TinyMCE template creation and editing example.</h2>
   
@@ -20,4 +21,5 @@
 
   <p>Don’t forget to check out our other product <a href="http://www.plupload.com" target="_blank">Plupload</a>, your ultimate upload solution featuring HTML5 upload support.</p>
   <p>Thanks for supporting TinyMCE! We hope it helps you and your users create great content.<br>All the best from the TinyMCE team.</p>
+</div>
 </textarea>
