DOC-2024: /live-demos/accordion/index.html
Added material and removed boilerplate.

--- a/modules/ROOT/examples/live-demos/accordion/index.html
+++ b/modules/ROOT/examples/live-demos/accordion/index.html
@@ -20,15 +20,13 @@
 
   <details>
     <summary>Are there other Accordion options?</summary>
-      <p>[Programmatic options here.]</p>
+      <p>The Accordion plugin provides<br />
+         four commands (<code>InsertAccordion</code>, <code>ToggleAccordion</code>, <code>ToggleAllAccordions</code>, and <code>RemoveAccordion</code>) and<br />
+         two initialization options (<code>details_initial_state</code> and <code>details_serialized_state</code>)</p>
+      <p>See below for details</p>
   </details>
 
-  <details>
-    <summary>[Is there another useful question to add?]</summary>
-      <p>[With useful answers here.]</p>
-  </details>		
 
-  
   <h2>Got questions or need help?</h2>
 
   <ul>
