DOC-2024: /live-demos/accordion/index.html
Copy edits.

--- a/modules/ROOT/examples/live-demos/accordion/index.html
+++ b/modules/ROOT/examples/live-demos/accordion/index.html
@@ -20,9 +20,9 @@
 
   <details>
     <summary>Are there other Accordion options?</summary>
-      <p>The Accordion plugin provides<br />
-         four commands (<code>InsertAccordion</code>, <code>ToggleAccordion</code>, <code>ToggleAllAccordions</code>, and <code>RemoveAccordion</code>) and<br />
-         two initialization options (<code>details_initial_state</code> and <code>details_serialized_state</code>)</p>
+      <p>The Accordion plugin provides:<br />
+         four commands (<code>InsertAccordion</code>, <code>ToggleAccordion</code>, <code>ToggleAllAccordions</code>, and <code>RemoveAccordion</code>); and<br />
+         two initialization options (<code>details_initial_state</code> and <code>details_serialized_state</code>).</p>
       <p>See below for details</p>
   </details>
 
