DOC-2024: index.html
Typo correction: s/collaps/collapse/.

--- a/modules/ROOT/examples/live-demos/accordion/index.html
+++ b/modules/ROOT/examples/live-demos/accordion/index.html
@@ -15,7 +15,7 @@
     <summary>How does it present to an end-user?</summary>
       <p>By default, when the <code>accordion</code> plugin is loaded, the command is available in the TinyMCE menu at <strong>Insert → Accordion</strong>.</p>
       <p>Adding <code>accordion</code> to the <code>toolbar</code> in the TinyMCE configuration adds an Accordion icon to the TinyMCE toolbar.</p>
-      <p>And, when a specific collapsible section is selected, a pop-up menu presents offering two controls: one to collaps or expand the selected section; and one to delete the selected section.</p>
+      <p>And, when a specific collapsible section is selected, a pop-up menu presents offering two controls: one to collapse or expand the selected section; and one to delete the selected section.</p>
   </details>
 
   <details>
