--- a/modules/ROOT/examples/live-demos/accordion/index.html
+++ b/modules/ROOT/examples/live-demos/accordion/index.html
@@ -6,19 +6,19 @@
 
   <p>This is a demo of the <strong>Accordion</strong> open source plugin.</p>
 
-  <details>
+  <details class="mce-accordion">
     <summary>What does the <strong>Accordion</strong> plugin do?</summary>
       <p>The Accordion plugin allows for the creation of collapsible sections in a document that can be expanded or collapsed to show or hide additional content.</p>
   </details>
 
-  <details>
+  <details class="mce-accordion">
     <summary>How does it present to an end-user?</summary>
       <p>By default, when the <code>accordion</code> plugin is loaded, the command is available in the TinyMCE menu at <strong>Insert → Accordion</strong>.</p>
       <p>Adding <code>accordion</code> to the <code>toolbar</code> in the TinyMCE configuration adds an Accordion icon to the TinyMCE toolbar.</p>
       <p>And, when a specific collapsible section is selected, a pop-up menu presents offering two controls: one to collapse or expand the selected section; and one to delete the selected section.</p>
   </details>
 
-  <details>
+  <details class="mce-accordion">
     <summary>Are there other Accordion options?</summary>
       <p>The Accordion plugin provides:<br />
          four commands (<code>InsertAccordion</code>, <code>ToggleAccordion</code>, <code>ToggleAllAccordions</code>, and <code>RemoveAccordion</code>); and<br />
