Typo correction: s/Accordions/Accordion/.
Co-authored-by: Karl Kemister-Sheppard <karlkemistersheppard@gmail.com>

--- a/modules/ROOT/examples/live-demos/accordion/index.html
+++ b/modules/ROOT/examples/live-demos/accordion/index.html
@@ -2,7 +2,7 @@
 
   {{logofordemoshtml}}
 
-  <h1 style="text-align: center;">The Accordions plugin</h1>
+  <h1 style="text-align: center;">The Accordion plugin</h1>
 
   <p>This is a demo of the <strong>Accordion</strong> open source plugin.</p>
 
