--- a/modules/ROOT/examples/live-demos/uce-template-creation/index.html
+++ b/modules/ROOT/examples/live-demos/uce-template-creation/index.html
@@ -1,6 +1,6 @@
 <textarea id="template-creation">
 <div id="template">
-  {*logofordemoshtml*}
+  {{logofordemoshtml}}
   <h2 style="text-align: center;">Multi-root editing and creating document templates</h2>
 <p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 
