DOC-2069: Moved demo files

--- a/modules/ROOT/examples/live-demos/uce-template-creation/index.html
+++ b/modules/ROOT/examples/live-demos/uce-template-creation/index.html
@@ -6,7 +6,7 @@
 
 <section class="cover">
   <header>
-    <img src="images/template-document-logo_2x.png" alt="demo document logo with triangle shapes" width="160" height="106">
+    <img src="{{imagesdir}}/uce-template-creation/template-document-logo_2x.png" alt="demo document logo with triangle shapes" width="160" height="106">
   </header>
   <main class="editable">
   <h1>Project proposal template</h1>
@@ -81,10 +81,10 @@
   <p><span style="font-size: 20px;">Please reach out to our region associates for any inquiries</span></p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
-  <p><img src="images/template-document-fredrik_2x.png" alt="profile picture of one staff member" width="84" height="84"></p>
+  <p><img src="{{imagesdir}}/uce-template-creation/template-document-fredrik_2x.png" alt="profile picture of one staff member" width="84" height="84"></p>
   <p>Fredrik Danielsson <br>+46 70 1740605 <br><a href="mailto:fredrik.danielsson@example.com">fredrik.danielsson@example.com</a></p>
   <p>&nbsp;</p>
-  <p><img src="images/template-document-viola_2x.png" alt="profile picture of a second staff member" width="84" height="84"></p>
+  <p><img src="{{imagesdir}}/uce-template-creation/template-document-viola_2x.png" alt="profile picture of a second staff member" width="84" height="84"></p>
   <p>Viola From <br>+46 70 1740699 <br><a href="mailto:viola.from@example.com">viola.from@example.com</a></p>
   </main>
 </section>
