DOC-2069: ie-template-creation/index.js & index.html
1. re-named parent folder for new navigation category (integration example).
2. Added explanatory note as comment to `const content_style` constant in index.js.
3. Copy-edit to example copy in index.html.

--- a/modules/ROOT/examples/live-demos/ie-template-creation/index.html
+++ b/modules/ROOT/examples/live-demos/ie-template-creation/index.html
@@ -69,7 +69,7 @@
 
     <p>Once we have agreed on a solution, our team implements the project plan.</p>
 
-    <p>We will first deliver a detailed outline of the plan with a timeline that includes and all relevant due dates and deliverables.</p>
+    <p>We will first deliver a detailed outline of the plan with a timeline that includes all relevant due dates and deliverables.</p>
   </main>
 </section>
 
