DOC-2069: ie-template-creation/index.html
Removed prefixing template text.

Added white space above suffixing template text.

Added comment noting this suffix material will not present in the demonstration if *File → New document* is chosen from the demonstration’s menu bar.

--- a/modules/ROOT/examples/live-demos/ie-template-creation/index.html
+++ b/modules/ROOT/examples/live-demos/ie-template-creation/index.html
@@ -1,9 +1,5 @@
 <textarea id="template-creation">
 <div id="template">
-  {{logofordemoshtml}}
-  <h2 style="text-align: center;">Multi-root editing and creating document templates</h2>
-<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
-
 <section class="cover">
   <header>
     <img src="{{imagesdir}}/uce-template-creation/template-document-logo_2x.png" alt="demo document logo with triangle shapes" width="160" height="106">
@@ -89,19 +85,13 @@
   </main>
 </section>
 
-
-
-
-
-
-
-
-
-
-
-
-<p>&nbsp;</p>
-<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
+<!--
+white space added to visually separate the demonstration template material from the example template
+If *File → New document* is selected from the demonstration’s menubar, none of this material
+(including this comment) will present in the new document.
+The demonstration template, however, will.
+-->
+<p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p><p>&nbsp;</p>
 
 
 <h2>Got questions or need help?</h2>
