DOC-2026: /live-demos/ai-demo/index.html
Edited plugin name: s/AI/AI Assistant/.

Co-authored-by: tiny-ben-tran <ben.tran@tiny.cloud>

--- a/modules/ROOT/examples/live-demos/ai-demo/index.html
+++ b/modules/ROOT/examples/live-demos/ai-demo/index.html
@@ -2,7 +2,7 @@
 
   {{logofordemoshtml}}
 
-  <h1 style="text-align: center;">The AI plugin</h1>
+  <h1 style="text-align: center;">The AI Assistant plugin</h1>
 
   <p>This is a demo of the <strong>AI</strong> Premium plugin.</p>
 
