DOC-2138: /live-demos/mentions/index.html
Added paragraph noting the random nature of the photo-and-name pairing possible when using the demo.

--- a/modules/ROOT/examples/live-demos/mentions/index.html
+++ b/modules/ROOT/examples/live-demos/mentions/index.html
@@ -1,4 +1,7 @@
 <textarea id="mentions">
   <p>Type "<kbd>@</kbd>" followed immediately by one or more characters.</p>
   <p>For example: @a</p>
+  <p>&nbsp;</p>
+  <p><strong>NB:</strong> This demonstration emulates a back-end database store by randomly matching freely-distributable portrait photographs with a semi-arbitrary list of names and titles. Curious-to-cultural-norms pairings of portraits and names are entirely possible.</p>
+  
 </textarea>
