DOC-2150: /live-demos/linkchecker/index.html
Copy edits: two missing commas no longer missing.

--- a/modules/ROOT/examples/live-demos/linkchecker/index.html
+++ b/modules/ROOT/examples/live-demos/linkchecker/index.html
@@ -19,7 +19,7 @@
 <li>highlighted in red by the <strong>Link Checker</strong> plugin.</li>
 </ol>
 
-<p>Choose <strong>View → Source code</strong>, or click the <strong>Source code</strong> toolbar button to see that each automatically created anchor tag has also had the <code>aria-invalid="true"</code> attribute added by the <strong>Link Checker</strong> plugin.</p>
+<p>Choose <strong>View → Source code</strong>, or click the <strong>Source code</strong> toolbar button, to see that each automatically created anchor tag has also had the <code>aria-invalid="true"</code> attribute added by the <strong>Link Checker</strong> plugin.</p>
 
 <h3>Valid domain-name strings</h3>
 
@@ -40,6 +40,6 @@
 <li><strong>not</strong> highlighted in red by the <strong>Link Checker</strong> plugin.</li>
 </ol>
 
-<p>Choose <strong>View → Source code</strong>, or click the <strong>Source code</strong> toolbar button to see that each automatically created anchor tag does <em>not</em> have the <code>aria-invalid="true"</code> attribute.</p>
+<p>Choose <strong>View → Source code</strong>, or click the <strong>Source code</strong> toolbar button, to see that each automatically created anchor tag does <em>not</em> have the <code>aria-invalid="true"</code> attribute.</p>
 
 </textarea>
