DOC-2171_TINY-9976_TINY-9973: advtemplate-predefined/index.html
Typo correction and markup edits.

--- a/modules/ROOT/examples/live-demos/advtemplate-insertionpoint/index.html
+++ b/modules/ROOT/examples/live-demos/advtemplate-insertionpoint/index.html
@@ -1,7 +1,7 @@
 <textarea id="advanced-template-insertionpoint">
-<h2>Using the Insertion Point Marker with Advanced Templates (and Merge Tags}<h2>
+<h3>Using the Insertion Point Marker with Advanced Templates (and Merge Tags)<h3>
 
-<h3>To insert a template</h3>
+<h4>To insert a template</h4>
  <ol>
   <li>
     Select <strong>Template…</strong> from the <strong>Insert</strong> menu or<br />
@@ -21,7 +21,7 @@
 <li>click <strong>Insert</strong> or press <strong>Return</strong>.</li>
 </ol>
 
-<h3>Noting the difference</h3>
+<h4>Noting the difference</h4>
 
 <p>The <em>Name entry prompt</em> template without the <code>{{mce-cursor}}</code> insertion point marker, places the insertion point at the end of the template text.</p>
 
@@ -31,7 +31,7 @@
 
 <p>And, by equivalent contrast, the <em>Letter outline</em> template with the <code>{{mce-cursor}}</code> insertion point marker places the insertion point at the right spot for someone to start writing a letter.</p>
 
-<h3>Working with Merge Tags</h3>
+<h4>Working with Merge Tags</h4>
 
 <p>The second pre-defined template in this demonstration — the <em>Letter outline</em> template — shows the <code>{{mce-cursor}}</code> string working in conjunction with the <a href="https://tiny.cloud/docs/tinymce/6/mergetags/">Merge Tags</a> Premium plugin.</p>
 
