feature/6.7/DOC-2171_TINY-9976_TINY-9973: /live-demos/advtemplate-insertionpoint/index.html
Notes on the relationship (or lack thereof) between the Insertion Point Marker string and the Merge Tags plugin re-written.

--- a/modules/ROOT/examples/live-demos/advtemplate-insertionpoint/index.html
+++ b/modules/ROOT/examples/live-demos/advtemplate-insertionpoint/index.html
@@ -35,6 +35,12 @@
 
 <p>The second pre-defined template in this demonstration — the <em>Letter outline</em> template — shows the <code>{{mce-cursor}}</code> string working in conjunction with the <a href="https://tiny.cloud/docs/tinymce/6/mergetags/">Merge Tags</a> Premium plugin.</p>
 
-<p>The fixed string that is the Insertion Point Marker uses the same delimiting characters as are used by default by the Merge Tags plugin. However, the Merge Tags plugin knows to ignore this particular fixed string.</p>
+<p>The fixed string that is the Insertion Point Marker uses the same delimiting characters as are used by default by the Merge Tags plugin.</p>
+
+<p>The <strong>Merge Tags</strong> plugin knows nothing about the <code>{{mce-cursor}}</code> being a marker string for the <strong>Advanced Templates</strong> plugin. And, if this particular string was used in a Merge Tags configuration, the <strong>Merge Tags</strong> plugin would recognise it and substitute it with whatever contents it was set to substitute, as expected.
+
+<p>The <strong>Advanced Templates</strong> plugin replaces the marker string with a hook element before inserting a template containing the string in to a TinyMCE instance, however.</p>
+
+<p>Consequently the <strong>Advanced Templates</strong> insertion point marker string is never seen by the <strong>Merge Tags</strong> plugin.</p>
 
 </textarea>
