--- a/modules/ROOT/examples/live-demos/advtemplate-insertionpoint/index.html
+++ b/modules/ROOT/examples/live-demos/advtemplate-insertionpoint/index.html
@@ -11,10 +11,10 @@
   Select the template to add to the TinyMCE document from the <strong>Templates</strong> dialog that presents.
     <ol>
       <li>
-      Click <strong>Without an insertion point marker</strong> to see and select a template that does not use the <code>{{mce-cursor}}</code> insertion point marker.
+      Click the <strong>Without an insertion point marker</strong> category to see and select a template that does not use the <code>{{mce-cursor}}</code> insertion point marker.
       </li>
       <li>
-      Click <strong>With an insertion point marker</strong> to see and select a template that does use the <code>{{mce-cursor}}</code> insertion point marker.
+      Click the <strong>With an insertion point marker</strong> category to see and select a template that does use the <code>{{mce-cursor}}</code> insertion point marker.
       </li>
     </ol>
   </li>
