--- a/modules/ROOT/examples/live-demos/advtemplate-mce-clipboard/index.html
+++ b/modules/ROOT/examples/live-demos/advtemplate-mce-clipboard/index.html
@@ -1,5 +1,5 @@
 <textarea id="advanced-template-mce-clipboard">
-  <h3>Using the mce-clipboard Marker with Advanced Templates<h3>
+  <h3>Using the {{mce-clipboard}} Marker with Advanced Templates<h3>
   <h4>To insert a template</h4>
   <div>
     <ol>
