--- a/modules/ROOT/examples/live-demos/advtemplate-mce-clipboard/index.html
+++ b/modules/ROOT/examples/live-demos/advtemplate-mce-clipboard/index.html
@@ -24,6 +24,6 @@
     </ol>
   </div>
   <h4>Noting the difference</h4>
-  <p>The <em>Paste your clipboard</em> template without the <code>{{mce-clipboard}}</code> marker, does not replace the and content marker within the template text.</p>
-  <p>By contrast, the <em>Paste your clipboard</em> template with the <code>{{mce-clipboard}}</code> marker replaces the marker with content copied to the users native clipboard.</p>
+  <p>The <em>Without an mce-clipboard marker</em> template does not replace the and content marker within the template text.</p>
+  <p>By contrast, the <em>With an mce-clipboard marker</em> template replaces the marker with content copied to the users native clipboard.</p>
 </textarea>
