--- a/modules/ROOT/examples/live-demos/advtemplate-mce-clipboard/index.html
+++ b/modules/ROOT/examples/live-demos/advtemplate-mce-clipboard/index.html
@@ -11,7 +11,7 @@
         <ol>
           <li>
             <p>Click the <strong>without an <code>{{mce-clipboard}}</code> marker</strong> marker.</p>
-            <p><em>when a template <strong>does not</strong> contain a valid {{mce-clipboard}} marker, the content within the users clipboard will <strong>not</strong> replace the marker when the user inserts the template.</em></p>
+            <p>The template should be inserted into the editor content regardless of any clipboard content./p>
           </li>
           <li>
             <p>Click the <strong>with a <code>{{mce-clipboard}}</code> marker.</strong></p>
