--- a/modules/ROOT/examples/live-demos/advtemplate-insertionpoint/index.html
+++ b/modules/ROOT/examples/live-demos/advtemplate-insertionpoint/index.html
@@ -11,10 +11,10 @@
   Select the template to add to the TinyMCE document from the <strong>Templates</strong> dialog that presents.
     <ol>
       <li>
-      Click the <strong>Without an insertion point marker</strong> category to see and select a template that does not use the <code>{{mce-cursor}}</code> insertion point marker.
+      Click the <strong>Without an insertion point marker</strong> category to see and select a template that does not use the <code>{{prefix}}mce-cursor{{suffix}}</code> insertion point marker.
       </li>
       <li>
-      Click the <strong>With an insertion point marker</strong> category to see and select a template that does use the <code>{{mce-cursor}}</code> insertion point marker.
+      Click the <strong>With an insertion point marker</strong> category to see and select a template that does use the <code>{{prefix}}mce-cursor{{suffix}}</code> insertion point marker.
       </li>
     </ol>
   </li>
@@ -23,21 +23,21 @@
 
 <h4>Noting the difference</h4>
 
-<p>The <em>Name entry prompt</em> template without the <code>{{mce-cursor}}</code> insertion point marker, places the insertion point at the end of the template text.</p>
+<p>The <em>Name entry prompt</em> template without the <code>{{prefix}}mce-cursor{{suffix}}</code> insertion point marker, places the insertion point at the end of the template text.</p>
 
-<p>By contrast, the <em>Name entry prompt</em> template with the <code>{{mce-cursor}}</code> insertion point marker places the insertion point at the right spot for someone to enter their name, as requested.</p>
+<p>By contrast, the <em>Name entry prompt</em> template with the <code>{{prefix}}mce-cursor{{suffix}}</code> insertion point marker places the insertion point at the right spot for someone to enter their name, as requested.</p>
 
-<p>Similarly, the <em>Letter outline</em> template without the <code>{{mce-cursor}}</code> insertion point marker, places the insertion point at the end of the template text.</p>
+<p>Similarly, the <em>Letter outline</em> template without the <code>{{prefix}}mce-cursor{{suffix}}</code> insertion point marker, places the insertion point at the end of the template text.</p>
 
-<p>And, by equivalent contrast, the <em>Letter outline</em> template with the <code>{{mce-cursor}}</code> insertion point marker places the insertion point at the right spot for someone to start writing a letter.</p>
+<p>And, by equivalent contrast, the <em>Letter outline</em> template with the <code>{{prefix}}mce-cursor{{suffix}}</code> insertion point marker places the insertion point at the right spot for someone to start writing a letter.</p>
 
 <h4>Working with Merge Tags</h4>
 
-<p>The second pre-defined template in this demonstration — the <em>Letter outline</em> template — shows the <code>{{mce-cursor}}</code> string working in conjunction with the <a href="https://tiny.cloud/docs/tinymce/6/mergetags/">Merge Tags</a> Premium plugin.</p>
+<p>The second pre-defined template in this demonstration — the <em>Letter outline</em> template — shows the <code>{{prefix}}mce-cursor{{suffix}}</code> string working in conjunction with the <a href="https://tiny.cloud/docs/tinymce/6/mergetags/">Merge Tags</a> Premium plugin.</p>
 
 <p>The fixed string that is the Insertion Point Marker uses the same delimiting characters as are used by default by the Merge Tags plugin.</p>
 
-<p>The <strong>Merge Tags</strong> plugin knows nothing about the <code>{{mce-cursor}}</code> being a marker string for the <strong>Advanced Templates</strong> plugin. And, if this particular string was used in a Merge Tags configuration, the <strong>Merge Tags</strong> plugin would recognise it and substitute it with whatever contents it was set to substitute, as expected.
+<p>The <strong>Merge Tags</strong> plugin knows nothing about the <code>{{prefix}}mce-cursor{{suffix}}</code> being a marker string for the <strong>Advanced Templates</strong> plugin. And, if this particular string was used in a Merge Tags configuration, the <strong>Merge Tags</strong> plugin would recognise it and substitute it with whatever contents it was set to substitute, as expected.
 
 <p>The <strong>Advanced Templates</strong> plugin removes the Insertion Point Marker before inserting a template containing the string in to a TinyMCE instance, however.</p>
 
